apps/staging/vm-services/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oai-provider-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: oai-provider-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: oai-input-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: oai-input-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: uptime-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ipfs-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ipfs-admin-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ipfs-admin-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: mscexplainer-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mscexplainer-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: mscbackend-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mscbackend-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: msceval-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: msceval-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: flask-external
  namespace: staging
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: flask-external
  namespace: staging
subsets:
- addresses:
  - ip: 130.73.240.217
  ports:
  - port: 443
