apps/staging/vm-services/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: oai-provider-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`oai.staging.mardi4nfdi.org`)
    services:
    - name: oai-provider-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: oai-input-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`oai-input.staging.mardi4nfdi.org`)
    services:
    - name: oai-input-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: uptime-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`uptime.staging.mardi4nfdi.org`)
    services:
    - name: uptime-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ipfs-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`ipfs.staging.mardi4nfdi.org`)
    services:
    - name: ipfs-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ipfs-admin-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`ipfs-admin.staging.mardi4nfdi.org`)
    services:
    - name: ipfs-admin-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mscexplainer-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`mscexplainer.staging.mardi4nfdi.org`)
    services:
    - name: mscexplainer-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mscbackend-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`mscbackend.staging.mardi4nfdi.org`)
    services:
    - name: mscbackend-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: msceval-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`msceval.staging.mardi4nfdi.org`)
    services:
    - name: msceval-external
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: flask-route
  namespace: staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`flask.staging.mardi4nfdi.org`)
    services:
    - name: flask-external
      port: 443
  tls:
    passthrough: true
